--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "5.0.0",
   "description": "CRUD Sprinkle for UserFrosting 5",
   "funding": "https://opencollective.com/userfrosting",
-  "main": "app/assets/main.js",
   "license": "MIT",
   "author": "Srinivas Nukala (https://srinivasnukala.com/)",
   "contributors": [
@@ -22,6 +21,13 @@
   "bugs": {
     "url": "https://github.com/ssnukala/issues"
   },
+  "main": "app/assets/main.js",
+  "files": [
+    "CHANGELOG.md",
+    "app/assets",
+    "webpack.config.js",
+    "webpack.entries.js"
+  ],
   "dependencies": {
     "@userfrosting/theme-adminlte": "^5.0.0"
   },
