--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "birke/rememberme": "^2.0",
         "nikic/php-parser": "^4.2.2",
         "userfrosting/framework": "^5.0",
-        "userfrosting/sprinkle-core": "^5.0"
+        "userfrosting/sprinkle-core": "^5.0",
+        "lcharette/uf_formgenerator": "~5.1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
