--- a/app/schema/crud5/users.yaml
+++ b/app/schema/crud5/users.yaml
@@ -5,6 +5,7 @@ description: Manage users
 table:
   id: table-user
   css-class: crud5-table
+  schema: user
   columns:
     user_name:
       label: "USERNAME"
